comment: english commentary added

--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -216,7 +216,8 @@ _:-o-prefocus,
     }
 }
 
-// TODO: ::ng-deep / /deep/ parece ser uma forma de seleção que será abolida futuramente, deve ser ecnontrada uma forma alternativa de edição desse componente sem a utilização do desses seletores.
+// TODO: ::ng-deep / /deep/ 
+// Seems to be a form of selection that will be abolished in the future, an alternative form of editing of this component should be found without the use of these selectors.
 /*
     Links de referência:
     https://angular.io/guide/component-styles
