feat(menu): 'youthspeak' added

--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -48,6 +48,11 @@
                   </a>
                 </ul>
               </li>
+              <a href="http://aiesec.org.br/youthspeak/">
+                <li>
+                  Youthspeak
+                </li>
+              </a>
               <li>
                 Blog
                 <ul class="animated fadeIn faster">
@@ -105,6 +110,11 @@
                   </a>
                 </ul>
               </li>
+              <a href="http://aiesec.org.br/youthspeak/">
+                <li>
+                  <span>Youthspeak</span>
+                </li>
+              </a>
               <li>
                 <span>Blog</span>
                 <ul class="animated fadeIn faster">
