--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
     <li routerLink="/landing-page-gv">
         landing page gv
     </li>
-    <li>
+    <li routerLink="/landing-page-gt">
         landing page ge (waiting)
     </li>
     <li>
