--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -156,7 +156,7 @@ body {
 .styled-select,
 .styled-select select {
     width: 100%;
-    color: #cb3227 !important;
+    color: #000 !important;
 }
 
 select:focus {
@@ -244,7 +244,7 @@ _:-o-prefocus,
             font-size: 16px;
             font-weight: lighter;
             font-family: "Lato", sans-serif;
-            color: #7b1200;
+            color: #000;
             :focus {
                 border: 0;
                 box-shadow: 0;
@@ -252,19 +252,19 @@ _:-o-prefocus,
         }
         input::-webkit-input-placeholder {
             font-size: 16px !important;
-            color: #d23820
+            color: #000
         }
         input:-moz-placeholder {
             font-size: 16px !important;
-            color: #d23820
+            color: #000
         }
         input::-moz-placeholder {
             font-size: 16px !important;
-            color: #d23820
+            color: #000
         }
         input:-ms-input-placeholder {
             font-size: 16px !important;
-            color: #d23820
+            color: #000
         }
     }
     &.gt {
@@ -302,7 +302,7 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
     border: 0;
-    -webkit-text-fill-color: #7b1200 !important;
+    -webkit-text-fill-color: #000 !important;
     -webkit-box-shadow: 0 0 0px 1000px transparent inset;
     transition: background-color 5000s ease-in-out 0s;
 }
@@ -894,7 +894,7 @@ label {
                 font-size: 16px;
                 font-weight: lighter;
                 font-family: "Lato", sans-serif;
-                color: #7b1200;
+                color: #000;
                 :focus {
                     border: 0;
                     box-shadow: 0;
@@ -903,22 +903,22 @@ label {
             input::-webkit-input-placeholder {
                 font-size: 12px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input:-moz-placeholder {
                 font-size: 12px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input::-moz-placeholder {
                 font-size: 12px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input:-ms-input-placeholder {
                 font-size: 12px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
         }
     }
@@ -954,7 +954,7 @@ label {
     }
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 12px;
         font-weight: bold;
         text-align: right;
@@ -962,7 +962,7 @@ label {
     }
     input:-moz-placeholder {
         /* Firefox 18- */
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 12px;
         font-weight: bold;
         text-align: right;
@@ -970,14 +970,14 @@ label {
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 12px;
         font-weight: bold;
         text-align: right;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 12px;
         font-weight: bold;
         text-align: right;
@@ -989,7 +989,7 @@ label {
     input[type=tel] {
         font-size: 15px;
         font-weight: lighter;
-        color: #7b1200;
+        color: #000;
         padding-right: 10px;
         text-align: right;
     }
@@ -1016,7 +1016,7 @@ label {
                 font-size: 16px;
                 font-weight: lighter;
                 font-family: "Lato", sans-serif;
-                color: #7b1200;
+                color: #000;
                 :focus {
                     border: 0;
                     box-shadow: 0;
@@ -1025,22 +1025,22 @@ label {
             input::-webkit-input-placeholder {
                 font-size: 14px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input:-moz-placeholder {
                 font-size: 14px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input::-moz-placeholder {
                 font-size: 14px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
             input:-ms-input-placeholder {
                 font-size: 14px !important;
                 font-weight: bold;
-                color: #d23820
+                color: #000
             }
         }
     }
@@ -1070,7 +1070,7 @@ label {
     input[type=tel] {
         font-size: 15px;
         font-weight: lighter;
-        color: #7b1200;
+        color: #000;
         padding-right: 0;
         text-align: left;
     }
@@ -1079,7 +1079,7 @@ label {
     input[type=email],
     input[type=tel] {
         background-color: #ed482d;
-        color: #7b1200;
+        color: #000;
     }
     /* Step3 */
     #step3 #header-voluntario-global {
@@ -1148,7 +1148,7 @@ label {
     input[type=tel] {
         font-size: 15px;
         font-weight: lighter;
-        color: #7b1200;
+        color: #000;
         padding-right: 0;
         text-align: left;
     }
@@ -1157,11 +1157,11 @@ label {
     input[type=email],
     input[type=tel] {
         background-color: #ed482d;
-        color: #7b1200;
+        color: #000;
     }
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 14px;
         font-weight: bold;
         text-align: left;
@@ -1169,7 +1169,7 @@ label {
     }
     input:-moz-placeholder {
         /* Firefox 18- */
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 14px;
         font-weight: bold;
         text-align: left;
@@ -1177,14 +1177,14 @@ label {
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 14px;
         font-weight: bold;
         text-align: left;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
-        color: #d23820 !important;
+        color: #000 !important;
         font-size: 14px;
         font-weight: bold;
         text-align: left;
@@ -1227,11 +1227,11 @@ label {
 .form-volutario-global {
     background: #f85a3f;
     font-family: 'Lato', sans-serif;
-    color: #ffffff;
+    color: #ffffff; 
 }
 
 .form-volutario-global .form-control {
-    color: #7b1200;
+    color: #000;
     background-color: #ed482d;
     border-bottom: 2px solid #f6a496;
 }
@@ -1251,21 +1251,21 @@ label {
 /* Placeholders */
 
 .form-volutario-global input::-webkit-input-placeholder {
-    color: #cb3227 !important;
+    color: #000 !important;
 }
 
 .form-volutario-global input:-moz-placeholder {
     /* Firefox 18- */
-    color: #cb3227 !important;
+    color: #000 !important;
 }
 
 .form-volutario-global input::-moz-placeholder {
     /* Firefox 19+ */
-    color: #cb3227 !important;
+    color: #000 !important;
 }
 
 .form-volutario-global input:-ms-input-placeholder {
-    color: #cb3227 !important;
+    color: #000 !important;
 }
 
 /* Inputs */
@@ -1274,7 +1274,7 @@ label {
 .form-volutario-global input[type=password],
 .form-volutario-globalinput[type=email],
 .form-volutario-globalinput[type=tel] {
-    color: #7b1200;
+    color: #000;
 }
 
 .form-volutario-global input[type=text]:focus,
@@ -1282,7 +1282,7 @@ label {
 .form-volutario-globalinput[type=email],
 .form-volutario-globalinput[type=tel] {
     background-color: #ed482d;
-    color: #7b1200;
+    color: #000;
     border-bottom: 2px solid #f6a496;
 }
 
@@ -1334,12 +1334,12 @@ label {
 .form-volutario-global .btn-secondary:not(:disabled):not(.disabled):active,
 .form-volutario-global .show>.btn-secondary.dropdown-toggle {
     color: #ffffff;
-    background-color: #7b1200;
-    border-color: #7b1200;
+    background-color: #000;
+    border-color: #000;
 }
 
 .form-volutario-global .btn-info {
-    color: #cb3227;
+    color: #000;
     background-color: #ed482d;
     border-color: #ed482d;
     border-bottom: 2px solid #f6a496;
@@ -1348,7 +1348,7 @@ label {
 }
 
 .form-volutario-global .btn-info:hover {
-    color: #cb3227;
+    color: #000;
     background-color: #ed482d;
     border-color: #ed482d;
     border-bottom: 2px solid #f6a496;
@@ -1357,7 +1357,7 @@ label {
 .form-volutario-global .btn-info:not(:disabled):not(.disabled).active,
 .form-volutario-global .btn-info:not(:disabled):not(.disabled):active,
 .form-volutario-global .show>.btn-info.dropdown-toggle {
-    color: #cb3227;
+    color: #000;
     background-color: #ed482d;
     border-color: transparent;
     border-bottom: 2px solid #f6a496;
