--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -1,6 +1,7 @@
 <head>
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
+<p-growl class="messages" [(value)]="msgs" [life]="5000"></p-growl>
 <div id="step1" class="form-volutario-global">
     <!-- Header -->
     <section class="header" id="header-voluntario-global">
