--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -8,7 +8,7 @@
 }
 
 // colors
-$default: #3f77bc;
+$primary-default: #3f77bc;
 $primary-gv: #ef4231;
 $primary-ge: #41bb9b;
 $primary-gt: #0b8ea0;
@@ -130,7 +130,7 @@ button {
 // structure
 .round {
     border-radius: 50%;
-    background-color: $default;
+    background-color: $primary-default;
     &.circle {
         width: 75px;
         height: 75px;
@@ -149,7 +149,7 @@ button {
 }
 
 // sections
-section {
+section, footer {
     &.margin-top-and-bottom {
         margin: 75px 0;
     }
@@ -168,6 +168,9 @@ section {
         }
         &.gt {
             background-color: $primary-gt;
+        }
+        &.default {
+            background-color: $primary-default;
         }
     }
 }
