feat(landing-page-ge): 'landing page ge' design done, with responsive layout, icons and images - fix menu links

--- a/src/app/landing-page-gt/landing-page-gt.component.scss
+++ b/src/app/landing-page-gt/landing-page-gt.component.scss
@@ -41,7 +41,7 @@
                 list-style: none;
                 justify-content: flex-end;
                 a:hover {
-                    text-decoration: underline;
+                    text-decoration: none;
                     color: #fff;
                 }
                 li {
@@ -52,6 +52,7 @@
                     text-transform: uppercase;
                     font-weight: lighter;
                     position: relative;
+                    cursor: pointer;
                     &:hover ul {
                         display: block;
                     }
@@ -66,7 +67,7 @@
                         min-width: 175px;
                         display: none;
                         a:hover {
-                            text-decoration: underline;
+                            text-decoration: none;
                             color: #fff;
                         }
                         li {
@@ -115,11 +116,10 @@
     min-height: 200px;
     .container>.row {
         justify-content: space-between;
-        align-items: center;
     }
     .product-image {
         background-image: url('../../assets/products/gt/gt-product-step.jpg');
-        min-height: 500px;
+        min-height: 400px;
         position: relative;
         box-shadow: 0 0 3px #f3f3f3;
         border-radius: 5px;
@@ -336,6 +336,7 @@
         right: 35px;
         top: 15px;
         color: $default;
+        z-index: 100
     }
     .active-responsive-menu {
         color: #fff;
