--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,10 +3,10 @@
         landing page gv
     </li>
     <li routerLink="/landing-page-gt">
-        landing page ge (waiting)
-    </li>
-    <li>
         landing page gt (waiting)
+    </li>
+    <li routerLink="/landing-page-ge">
+        landing page ge (waiting)
     </li>
 </ul>
 
