--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -1,4 +1,3 @@
-<p-growl class="messages" [(value)]="msgs" [life]="5000"></p-growl>
 <main>
   <div class="goToTop" [ngx-scroll-to]="'#header-product'">
     <i class="fas fa-sort-up"></i>
@@ -17,13 +16,13 @@
               <li>
                 Para jovens
                 <ul class="animated fadeIn faster">
-                  <li>
+                  <li routerLink="/landing-page-gv">
                     Voluntário Global
                   </li>
-                  <li>
+                  <li routerLink="/landing-page-ge">
                     Empreendedor Global
                   </li>
-                  <li>
+                  <li routerLink="/landing-page-gv">
                     Talento Global
                   </li>
                   <a href="http://aiesec.org.br/hospede-um-intercambista/">
@@ -79,13 +78,13 @@
               <li>
                 <span>Para jovens</span>
                 <ul class="animated fadeIn faster">
-                  <li>
+                  <li routerLink="/landing-page-gv">
                     Voluntário Global
                   </li>
-                  <li>
+                  <li routerLink="/landing-page-ge">
                     Empreendedor Global
                   </li>
-                  <li>
+                  <li routerLink="/landing-page-gv">
                     Talento Global
                   </li>
                   <a href="http://aiesec.org.br/hospede-um-intercambista/">
