--- a/src/app/landing-page-gv/landing-page-gv.component.scss
+++ b/src/app/landing-page-gv/landing-page-gv.component.scss
@@ -41,7 +41,7 @@
                 list-style: none;
                 justify-content: flex-end;
                 a:hover {
-                    text-decoration: underline;
+                    text-decoration: none;
                     color: #fff;
                 }
                 li {
@@ -66,10 +66,11 @@
                         min-width: 175px;
                         display: none;
                         a:hover {
-                            text-decoration: underline;
+                            text-decoration: none;
                             color: #fff;
                         }
                         li {
+                            cursor: pointer;
                             padding: 5px 10px;
                             text-align: left;
                             text-transform: none;
@@ -325,6 +326,7 @@
         right: 35px;
         top: 15px;
         color: $default;
+        z-index: 100
     }
     .active-responsive-menu {
         color: #fff;
