feat(footer):  footer component

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -1,3 +1,66 @@
-<p>
-  Footer
-</p>
+<!-- partners -->
+<section class="partners margin-top-and-bottom">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-sm-12">
+        <h1 class="centered italic">Os nossos parceiros premium</h1>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- footer -->
+<footer class="padding-top-and-bottom with-background bg-footer">
+  <div class="container">
+    <div class="row">
+      <div class="footer-logo">
+        <img class="img-responsive" src="../../assets/images/aiesec-logo.png" width="200px;">
+        <p class="centered semibold">Aventure-se nessa nova experiência e alcance o seu potencial!</p>
+      </div>
+    </div>
+    <hr/>
+    <div class="row">
+      <div class="footer-links col-md-6">
+        <div class="row">
+          <div class="footer-group-links col-md-4 col-sm-6">
+            <p class="semibold footer-link-title">Institucional</p>
+            <p><a href="http://aiesec.org.br/a-aiesec/">A AIESEC</a></p>
+            <p><a href="http://aiesec.org.br/faca-parte/">Faça parte</a></p>
+            <p><a href="http://aiesec.org.br/alumni/">Alummi</a></p>
+            <p><a href="http://aiesec.org.br/youthspeak/">YouthSpeak</a></p>
+          </div>
+          <div class="footer-group-links col-md-4 col-sm-6">
+            <p class="semibold footer-link-title">Institucional</p>
+            <p><a href="#">Empreendedor Global</a></p>
+            <p><a href="#">Talento Global</a></p>
+            <p><a href="#">Voluntário Global</a></p>
+            <p><a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
+          </div>
+          <div class="footer-group-links col-md-4 col-sm-6">
+            <p class="semibold footer-link-title">Seja parceiro</p>
+            <p><a href="http://aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
+            <p><a href="http://aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-links col-md-6">
+        <div class="row">
+          <div class="footer-group-links col-md-3 col-sm-6">
+            <p class="semibold footer-link-title">Blog</p>
+            <p><a href="http://business.aiesec.org.br/">Business</a></p>
+            <p><a href="http://aiesec.org.br/blog/estudantes/">Estudantes</a></p>
+          </div>
+          <div class="footer-group-links col-md-3 col-sm-6">
+            <p class="semibold footer-link-title"><a href="http://aiesec.org.br/contato/">Contato</a></p>
+          </div>
+          <div class="footer-social-networks col-md-6 col-sm-6">
+            <i class="fab fa-telegram-plane"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <p>AIESEC do Brasil 2018. Todos os direitos reservados.</p>
+  </div>
+</footer>
