feat(link): added links from partners

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -9,23 +9,25 @@
              scrollbar-hidden="true"
              drag-scroll-y-disabled="true"
             >
-              <img drag-scroll-item src="../../assets/images/partners/assistcard.png" />
-              <img drag-scroll-item src="../../assets/images/partners/delivery_much.png" />
-              <img drag-scroll-item src="../../assets/images/partners/dhl.png" />
-              <img drag-scroll-item src="../../assets/images/partners/electrolux.png" />
-              <img drag-scroll-item src="../../assets/images/partners/hyva.png" />
-              <img drag-scroll-item src="../../assets/images/partners/leroymerlin.png" />
-              <img drag-scroll-item src="../../assets/images/partners/mckinseyecompany.png" />
-              <img drag-scroll-item src="../../assets/images/partners/mondelez.png" />
-              <img drag-scroll-item src="../../assets/images/partners/nestle.png" />
-              <img drag-scroll-item src="../../assets/images/partners/nokia.png" />
-              <img drag-scroll-item src="../../assets/images/partners/resultadosdigitais.png" />
-              <img drag-scroll-item src="../../assets/images/partners/sap.png" />
-              <img drag-scroll-item src="../../assets/images/partners/votorantimcimentos.png" />
-              <img drag-scroll-item src="../../assets/images/partners/Whirlpoow.png" />              
+              <a target="_blank" href="https://www.assistcard.com/b2c/aiesec-br"> <img drag-scroll-item src="../../assets/images/partners/assistcard.png" /></a>
+              <a target="_blank" href="https://www.deliverymuch.com.br/"><img drag-scroll-item src="../../assets/images/partners/delivery_much.png" /></a>
+              <a target="_blank" href="https://aiesec.org/partner/286836"><img drag-scroll-item src="../../assets/images/partners/dhl.png" /></a>
+              <a target="_blank" href="https://aiesec.org/partner/272692"><img drag-scroll-item src="../../assets/images/partners/electrolux.png" /></a>
+              <a target="_blank" href="https://aiesec.org/partner/344322"><img drag-scroll-item src="../../assets/images/partners/hyva.png" /></a>
+              <a target="_blank" href="https://www.leroymerlin.com.br/blog"><img drag-scroll-item src="../../assets/images/partners/leroymerlin.png" /></a>
+              <a target="_blank" href="https://www.mckinsey.com.br/"><img drag-scroll-item src="../../assets/images/partners/mckinseyecompany.png" /></a>
+              <a target="_blank" href="https://br.mondelezinternational.com/home"><img drag-scroll-item src="../../assets/images/partners/mondelez.png" /></a>
+              <a target="_blank" href="https://www.nestle.com.br/"><img drag-scroll-item src="../../assets/images/partners/nestle.png" /></a>
+              <a target="_blank" href="https://aiesec.org/partner/330494"><img drag-scroll-item src="../../assets/images/partners/nokia.png" /></a>
+              <a target="_blank" href="https://resultadosdigitais.com.br/"><img drag-scroll-item src="../../assets/images/partners/resultadosdigitais.png" /></a>
+              <a target="_blank" href="https://www.sap.com/brazil/about.html"><img drag-scroll-item src="../../assets/images/partners/sap.png" /></a>
+              <a target="_blank" href="http://www.votorantimcimentos.com.br/"><img drag-scroll-item src="../../assets/images/partners/votorantimcimentos.png" /></a>
+              <a target="_blank" href="https://www.whirlpool.com.br/"><img drag-scroll-item src="../../assets/images/partners/Whirlpoow.png" /></a>
             </drag-scroll>
-            <div class="footer-carousel-btn-left"><i (click)="moveLeft()">Left</i></div>
-            <div class="footer-carousel-btn-right"><i (click)="moveRight()">Right</i></div>
+            <div class="footer-carousel-align">
+              <div class="footer-carousel-btn-left"><i (click)="moveLeft()" class="fas fa-chevron-left"></i></div>
+              <div class="footer-carousel-btn-right"><i (click)="moveRight()" class="fas fa-chevron-right"></i></div>
+            </div>
         </div>
       </div>
     </div>
@@ -77,7 +79,10 @@
             <p class="semibold footer-link-title"><a href="http://aiesec.org.br/contato/">Contato</a></p>
           </div>
           <div class="footer-social-networks col-md-6 col-sm-6">
-            <i class="fab fa-telegram-plane"></i>
+            <a target="_blank" href="https://www.facebook.com/AIESECinBrazil/"><i class="fab fa-facebook-square"></i></a>
+            <a target="_blank" href="https://instagram.com/aiesecnobrasil"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://twitter.com/AIESECBrasil"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://www.youtube.com/user/AIESECinBrazil/"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
       </div>
