--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -1,5 +1,15 @@
 @import '../../scss/global.scss';
 
+#bg-menu {
+    width: 100%;
+    height: 100%;
+    background-color:#fff;
+    position: fixed;
+    left:0;
+    top: 0;
+    z-index: 2;
+}
+
 .header-product {
     width: 100%;
     padding: 0 0 55px 0;
@@ -101,31 +111,47 @@
         right: 35px;
         top: 15px;
         color: $default;
-        z-index: 100
+        z-index: 100;
+        font-size: 25px;
     }
-    .active-responsive-menu {
+    #active-responsive-menu {
         color: #fff;
         flex-direction: column;
         position: fixed;
-        right: 25px;
-        top: 35px;
+        top: 45px;
         background-color: $default;
         border-radius: 10px;
         z-index: 100;
+        left: 0;
+        height: 95vh;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        display: flex;
+        box-sizing: border-box;
+        padding: 2.5vh 3%;
+        justify-content: flex-start;
+        overflow: hidden;
+        >a,
+        >li {
+            margin: 10px 0;
+        }
         li {
             padding: 0 !important;
             text-align: left !important;
-            span {
-                font-weight: bold;
-                text-align: left;
-                padding-left: 5px;
-            }
+        }
+        span {
+            font-weight: bold;
+            text-align: left;
+            padding-left: 5px;
+            font-size: 1.1rem;
         }
         li ul {
             display: flex !important;
             position: relative !important;
             background-color: transparent !important;
             li {
+                font-size: .95rem;
                 ul {
                     background-color: transparent;
                     li {
@@ -137,7 +163,6 @@
         }
     }
 }
-
 
 @media (min-width:768px) {
     .menu-icon,
