--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -124,7 +124,7 @@ body {
     position: fixed;
     right: 25px;
     top: 25px;
-    color: #fff;
+    color: #000;
     background-color: #fff;
     z-index: 999;
     border-radius: 10px;
@@ -157,6 +157,9 @@ body {
 .styled-select select {
     width: 100%;
     color: #fff !important;
+    option {
+        color: #000000;
+    }
 }
 
 select:focus {
@@ -303,8 +306,8 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
     border: 0;
     -webkit-text-fill-color: #fff !important;
-    -webkit-box-shadow: 0 0 0px 1fffpx transparent inset;
-    transition: background-color 5fffs ease-in-out 0s;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 .step-position {
@@ -1552,13 +1555,5 @@ label {
     .fab {
         display:inline-block;
         margin-left: 5px;
-    }
-}
-
-@media (max-width: 300px){
-    .form-row .buttons{
-        > div {
-            
-        }
     }
 }
