--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -1,13 +1,30 @@
 @import '../../scss/global.scss';
-
 #bg-menu {
     width: 100%;
     height: 100%;
-    background-color:#fff;
+    background-color: #fff;
     position: fixed;
-    left:0;
+    left: 0;
     top: 0;
     z-index: 2;
+}
+
+/*IE9*/
+
+*::selection {
+    background-color: transparent;
+}
+
+*::-moz-selection {
+    background-color: transparent;
+}
+
+* {
+    -webkit-user-select: none;
+    -moz-user-select: -moz-none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .header-product {
@@ -100,7 +117,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 990px) {
     .header-product div.responsive-menu ul#menu {
         display: none !important;
     }
@@ -131,10 +148,13 @@
         box-sizing: border-box;
         padding: 2.5vh 3%;
         justify-content: flex-start;
-        overflow: hidden;
+        overflow: auto;
         >a,
         >li {
             margin: 10px 0;
+        }
+        >a li {
+            margin-left: 0;
         }
         li {
             padding: 0 !important;
@@ -144,27 +164,21 @@
             font-weight: bold;
             text-align: left;
             padding-left: 5px;
-            font-size: 1.1rem;
+            font-size: 1.3rem;
         }
         li ul {
             display: flex !important;
             position: relative !important;
             background-color: transparent !important;
             li {
-                font-size: .95rem;
-                ul {
-                    background-color: transparent;
-                    li {
-                        margin: 0;
-                        padding: 5px 10px;
-                    }
-                }
+                font-size: 1.2rem;
+                padding: 10px 0px !important;
             }
         }
     }
 }
 
-@media (min-width:768px) {
+@media (min-width:990px) {
     .menu-icon,
     .active-responsive-menu {
         display: none !important;
